spacing fix for big romanizatio

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,7 +14,7 @@
 
 
 body {
-    margin-top: 50px;
+    margin-top: 75px;
     font-size: 30px;
     line-height: 1.5;
     font-family: 'arno-pro', Palatino, "Palatino Linotype", "Palatino LT STD", "Book Antiqua", "Times New Roman", Times, serif;
